--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-googlemaps==3.0.2
+googlemap
 Flask==1.0.2
-urllib3>=1.25.9 # not directly required, pinned by Snyk to avoid a vulnerability
-requests==2.20.0
+urllib3
+requests
 
