--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,16 @@
+certifi==2020.12.5
+chardet==3.0.4
+click==7.1.2
+Flask==1.1.2
+Flask-API==2.0
+Flask-JWT-Extended==4.0.2
+flask-jwtlogin==0.2.1
 googlemaps==3.0.2
-Flask==1.0.2
+idna==2.7
+itsdangerous==1.1.0
+Jinja2==2.11.3
+MarkupSafe==1.1.1
+PyJWT==2.0.1
 requests==2.19.1
+urllib3==1.23
+Werkzeug==1.0.1
