--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,6 @@
-attrs==20.3.0
-certifi==2020.12.5
-chardet==3.0.4
-click==7.1.2
-Flask==1.1.2
-Flask-API==2.0
-Flask-JWT-Extended==4.0.2
-flask-jwtlogin==0.2.1
-googlemaps==3.0.2
-idna==2.7
-iniconfig==1.1.1
-itsdangerous==1.1.0
-Jinja2==2.11.3
-MarkupSafe==1.1.1
-packaging==20.9
-pluggy==0.13.1
-py==1.10.0
-PyJWT==2.4.0
-pyparsing==2.4.7
-pytest==6.2.2
-requests==2.20
-toml==0.10.2
-Werkzeug==1.0.1
-itsdangerous==1.1.0
-Jinja2==2.11.3
-MarkupSafe==1.1.1
-requests==2.20
-Werkzeug==1.0.1
-
+fastapi==0.92.0
+uvicorn==0.20.0
+ruff==0.0.253
+sqlmodel==0.0.8
+black==23.1.0
+isort==5.12.0
