--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 fastapi==0.92.0
 uvicorn==0.20.0
-ruff==0.0.253
 sqlmodel==0.0.8
 black==23.1.0
 isort==5.12.0
@@ -12,3 +11,5 @@ psycopg2==2.9.5
 passlib==1.7.4
 bcrypt==4.0.1
 ruff ==0.0.272
+loguru==0.7.2
+pyyaml==6.0.1
